change context path

--- a/common-remote-pool/pom.xml
+++ b/common-remote-pool/pom.xml
@@ -93,7 +93,7 @@
 	</repositories>
 
 	<build>
-        <finalName>rpool</finalName>
+        <finalName>common-remote-pool</finalName>
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
