--- a/common-remote-pool/pom.xml
+++ b/common-remote-pool/pom.xml
@@ -143,6 +143,16 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.0</version>
 			</plugin>
+  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <includes>
+            <include>**/client/*</include>
+          </includes>
+        </configuration>
+      </plugin>
 
 		</plugins>
 	</build>
