--- a/common-remote-pool/pom.xml
+++ b/common-remote-pool/pom.xml
@@ -113,6 +113,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.12</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -141,18 +146,21 @@
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.0</version>
+				<version>2.2</version>
+				<configuration>
+					<port>80</port>
+				</configuration>
 			</plugin>
-  <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.4</version>
-        <configuration>
-          <includes>
-            <include>**/client/*</include>
-          </includes>
-        </configuration>
-      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<includes>
+						<include>**/client/*</include>
+					</includes>
+				</configuration>
+			</plugin>
 
 		</plugins>
 	</build>
